--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
+        "owen-it/laravel-auditing": "^13.7",
         "spatie/laravel-permission": "^6.17"
     },
     "require-dev": {
