--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "php": "^8.0.2|^8.3",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^9.19",
+        "laravel/horizon": "^5.32",
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
         "owen-it/laravel-auditing": "^13.7",
